<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_profiles"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/title_favorite" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/title_cart" />
        <item
            android:id="@+id/nav_buy"
            android:icon="@drawable/ic_buy"
            android:title="@string/title_buy" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_user"
                android:icon="@drawable/ic_user"
                android:title="@string/title_user" />
            <item
                android:id="@+id/nav_user_item"
                android:icon="@drawable/ic_user_item"
                android:title="@string/title_user_item" />
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_share"-->
<!--                android:title="@string/menu_share" />-->
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/title_about" />
        </menu>
    </item>

</menu>
